--- a/aboutus.html
+++ b/aboutus.html
@@ -71,24 +71,25 @@
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
-            </div>
-            <div class="col-6 col-sm-5 text-center">
-                <h5>Social</h5>
-                <a href="http://instagram.com/">Instagram</a>
-                <a href="http://facebook.com/">Facebook</a>
-                <a href="http://twitter.com/">Twitter</a>
-                <a href="http://youtube.com/">YouTube</a>
-            </div>
-            <div class="col-sm-4 text-center">
-                Tel: 1-206-555-1234<br />
-                Email: campsites@nucamp.co
-            </div>                
+                <div class="col-6 col-sm-5 text-center">
+                    <h5>Social</h5>
+                    <a href="http://instagram.com/">Instagram</a>
+                    <a href="http://facebook.com/">Facebook</a>
+                    <a href="http://twitter.com/">Twitter</a>
+                    <a href="http://youtube.com/">YouTube</a>
+                </div>
+                <div class="col-sm-4 text-center">
+                    Tel: 1-206-555-1234<br />
+                    Email: campsites@nucamp.co
+                </div>                
            </div>
         </div>
     </footer>
 
     <!-- Bootstrap JavaScript plugins -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" 
+    crossorigin="anonymous"></script>
 
 </body>
 </html>
